added jquery commands

--- a/10-31-17/jquery-basics.html
+++ b/10-31-17/jquery-basics.html
@@ -3,19 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>JQuery Exercise</title>
+
   </head>
   <body>
     <a href="http://www.facebook.com">Website1</a>
     <a id="google" href="http://google.com">Website2</a>
     <a class="my-link" href="http://www.google.com">Website3</a>
-    <a class="my-link" href="http://www.google.com">Website4</a>
-    <script>
-    document.getEletementByID('google').innerHTML="Google";
-    let links = gocument.getElementByClassName('my-link');
-    links[0].innterHTML="Twitter";
-    link[0].href= "http://www.twitter.com";
+    <a class="my-link" href="http://www.google.com">Website4</a>\
+    <div id="main-text">
 
-    </script>
 
+    <h1>HTML and CSS</h1>
+    <button class="my-buttons" type="button" >Recent Projects</button>
+
+    <ul class="projects">
+      <li>HTML for Newark</li>
+      <li>CSS for MISY350</li>
+    </ul>
+
+    <h1>JavaScript</h1>
+    <button class="my-buttons" type="button" >Recent Projects</button>
+
+    <ul class="projects">
+      <li>AYOOO SQUAD</li>
+      <li>WHATS GOOD HOMIE</li>
+    </ul>
+</div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="jquery-basics.js"></script>
   </body>
 </html>
